Increase spacing between comment body and "Delete" moderation button - fixed.

--- a/src/stylesheets/comments.scss
+++ b/src/stylesheets/comments.scss
@@ -75,7 +75,7 @@
 
                 .comment-delete {
                     float: right;
-                    padding-right: 10px;
+                    padding: 0 10px;
                 }
             }
         }
